--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     /* font-weight: 500; */
 }
 body{
-    margin:2vh 4vw 2vh 4vw;
+    margin:2rem 4rem 2rem 4rem;
 }
 p{
     font-weight: 500;
@@ -50,10 +50,9 @@ body{
         margin:2vh 4vw 2vh 4vw;
 }
 nav {
-    /* height: 40vh; */
     width: 20%;
     margin: 2vh 0 0 0;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     display: inline-block;
     box-sizing: content-box;
     vertical-align:top;
@@ -67,7 +66,7 @@ nav * {
 main{
     width: 75%;
     margin: 2vh 0 0 0;
-    /* border: 1px solid black; */
+    border: 1px solid black;
     box-sizing:border-box;
     display: inline-block;
 }
@@ -100,6 +99,42 @@ table{
 justify-content: center;    
 display: flex;
 }
+
+fieldset{
+    border: 0;
+}
+.input_txt{
+    width: 50%;
+    border: none;
+    border-bottom:  2px solid black;
+}
+/* .centrado{
+    text-align: center;
+} */
+.centrado>fieldset{
+    width: 100%;
+    border: 2px solid blue;
+}
+.input_doble>label , .input_doble>div {
+    width: 46%;
+    border: 2px solid orange;
+    display: inline-block;
+}
+.input_solo {
+    width: 100%;
+    display: inline-block;
+}
+
+.input_chec{
+    width: 50%;
+    border: 2px solid blue;
+}
+
+
+
+
+
+
 
 
 
