--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ body{
 nav {
     width: 20%;
     margin: 2vh 0 0 0;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: inline-block;
     box-sizing: content-box;
     vertical-align:top;
@@ -66,7 +66,7 @@ nav * {
 main{
     width: 75%;
     margin: 2vh 0 0 0;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     box-sizing:border-box;
     display: inline-block;
 }
@@ -102,6 +102,7 @@ display: flex;
 
 fieldset{
     border: 0;
+    margin: 1vh;
 }
 .input_txt{
     width: 50%;
@@ -113,11 +114,11 @@ fieldset{
 } */
 .centrado>fieldset{
     width: 100%;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 .input_doble>label , .input_doble>div {
     width: 46%;
-    border: 2px solid orange;
+    /* border: 2px solid orange; */
     display: inline-block;
 }
 .input_solo {
@@ -127,7 +128,11 @@ fieldset{
 
 .input_chec{
     width: 50%;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
+}
+button{
+    margin-left: 2vh;
+    height: 3vh;
 }
 
 
