--- a/style.css
+++ b/style.css
@@ -1,155 +1,190 @@
-*{
-    padding: 0 ;
+* {
+    padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: 'Courier New', Courier, monospace;
+    /* font-family: 'Courier New', Courier, monospace; */
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     /* font-weight: 500; */
 }
-body{
-    margin:2rem 4rem 2rem 4rem;
+
+body {
+    margin: 2rem 4rem 2rem 4rem;
+    background-image: url(./assets/fondo/fondo2.png);
+    background-size: 40% ;
+    background-repeat: repeat;
+    background-position: 50% 20%;
 }
-p{
+
+p {
     font-weight: 500;
 }
 
-.portada{    
+.portada {
     height: 40vh;
     border: 1px solid black;
-    margin : 0 0 1vh 0;
+    margin: 0 0 1vh 0;
     background-image: url(./assets/fondo/design1_image1.jpg);
     display: block;
-background-size:cover;
-background-position: center;
+    background-size: cover;
+    background-position: center;
 }
 
 h1 {
+    font-family: 'Courier New', Courier, monospace;
     font-size: 7vh;
     vertical-align: top;
     margin: 0;
 }
 
-.portada2{
+.portada2 {
     margin: 0 0 1vh 0;
 }
 
 .texto_portada {
+    font-family: 'Courier New', Courier, monospace;
     color: aliceblue;
     text-align: center;
     background-color: black;
 }
 
 .logo {
-    border: solid 2px white;
+    border: solid 2px black;
     height: 10vh;
     position: absolute;
     right: 20vh;
-    top: 38vh;background-color: white;
+    top: 38vh;
+    background-color: white;
 
 }
-body{
-        margin:2vh 4vw 2vh 4vw;
+
+body {
+    margin: 2vh 4vw 2vh 4vw;
 }
+
 nav {
     width: 20%;
     margin: 2vh 0 0 0;
-    /* border: 1px solid black; */
+    
     display: inline-block;
     box-sizing: content-box;
-    vertical-align:top;
+    vertical-align: top;
 }
+
 nav * {
+    /* border: 1px solid black; */
     margin: 1vh 3vw 5vh 3vw;
-    display: inline-block;
+    display: block;
 
 }
 
-main{
+nav>a:hover {
+    font-size: 21px;
+}
+
+main {
     width: 75%;
     margin: 2vh 0 0 0;
     /* border: 1px solid black; */
-    box-sizing:border-box;
+    box-sizing: border-box;
     display: inline-block;
 }
-main>img{
+
+main>img {
     margin-right: 2vh;
     height: 15rem;
-    width: 10rem;    
-    object-fit:contain;
+    width: 15rem;
+    object-fit: cover;
+    object-position: 45%;
     float: left;
 }
-.section{
-    border: 2px solid yellow;
+
+.section {
+    /* border: 2px solid yellow; */
     margin: 0;
     padding-top: 1vh;
 }
-.section > article {
+
+.section>article {
     margin: 0 0 2vh 0;
-    text-align:left;
+    text-align: left;
     vertical-align: top;
 }
-.correo{
+
+.correo {
     margin: 0;
 }
-.reglas{
+
+.reglas {
     text-align: center;
 }
-u{
+
+u {
     font-style: oblique;
 
 }
-table{
+
+table {
     margin: 2vh;
     width: 40vw;
     text-align: center;
 }
-.tabla{
+
+.tabla {
     /* border: 2px solid black; */
-justify-content: center;    
-display: flex;
+    justify-content: center;
+    display: flex;
 }
 
-fieldset{
+fieldset {
     border: 0;
     margin: 1vh;
 }
-.input_txt{
+
+.como_llegar:hover {
+    color: red
+}
+
+.input_txt {
     width: 50%;
     border: none;
-    border-bottom:  2px solid black;
+    border-bottom: 2px solid black;
 }
+
 /* .centrado{
     text-align: center;
 } */
-.centrado>fieldset{
+.centrado>fieldset {
     width: 100%;
     /* border: 2px solid blue; */
 }
-.input_doble>label , .input_doble>div {
+
+.input_doble>label,
+.input_doble>div {
     width: 46%;
     /* border: 2px solid orange; */
     display: inline-block;
 }
+
 .input_solo {
     width: 100%;
     display: inline-block;
 }
 
-.input_chec{
+.input_chec {
     width: 50%;
     /* border: 2px solid blue; */
 }
-button{
+
+button {
     margin-left: 2vh;
     height: 3vh;
 }
-
-
-
-
-
-
-
-
-
-
-
+.logomapa{
+    margin: 2vh 0 2vh 0;
+    height: 2rem;
+    vertical-align: middle;
+    display: inline;
+}
+iframe{
+    border: 3px solid rgb(206, 50, 167);
+}
